// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialState not found 1`] = `
"
// @flow
type Count = number
type State = { count: Count, isLoading: boolean }

const initState = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type Count = number;
type State = { count: Count; isLoading: boolean; };

const initState = {};
"
`;

exports[`initialize object when empty object 1`] = `
"
// @flow
type Count = number
type State = { count: Count, isLoading: boolean }

// $FlowFixMe
const initialState: State = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type Count = number;
type State = { count: Count; isLoading: boolean; };

// $FlowFixMe
const initialState: State = { \\"count\\": 0, \\"isLoading\\": false };
"
`;

exports[`overwirte property when property is not type match 1`] = `
"
// @flow
type Count = number
type State = { count: Count, isLoading: boolean }

// $FlowFixMe
const initialState: State = { count: 100 }

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type Count = number;
type State = { count: Count; isLoading: boolean; };

// $FlowFixMe
const initialState: State = { \\"count\\": 100, \\"isLoading\\": false };
"
`;

exports[`when state = number 1`] = `
"
// @flow
type Count = number
type State = Count

// $FlowFixMe
const initialState: State = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type Count = number;
type State = Count;

// $FlowFixMe
const initialState: State = 0;
"
`;

exports[`when state = number[] 1`] = `
"
// @flow
type State = number[]

// $FlowFixMe
const initialState: State = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type State = number[];

// $FlowFixMe
const initialState: State = [];
"
`;

exports[`when state = number[] and initlaState = [] 1`] = `
"
// @flow
type State = number[]

const initialState: State = [1, 2, 3]

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type State = number[];

const initialState: State = [1, 2, 3];
"
`;

exports[`when state = string 1`] = `
"
// @flow
type State = string

// $FlowFixMe
const initialState: State = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type State = string;

// $FlowFixMe
const initialState: State = \\"\\";
"
`;

exports[`when state = string and initialState = "hello" 1`] = `
"
// @flow
type State = string

// $FlowFixMe
const initialState: State = 'hello'

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type State = string;

// $FlowFixMe
const initialState: State = 'hello';
"
`;
